feat: complete all 100 tools with 11 domains
Added 55 more functions across 11 domains:

quality: +9 (aql, downtime, dpmo, lineBalancing, mtbf, ppk, ppm, rpn, yield)
metal: +17 (bearing, bolt, cutting, cuttingStock, gear, hardness, material, pressFit, roughness, screw, spring, tap, thread, tolerance, vibration, weldHeat, welding)
electronics: +5 (awg, capacitor, led, stencil, via)
construction: +5 (aggregate, brick, pert, roof, stair)
logistics: +8 (dimWeight, fillRate, freightClass, kanban, pallet3d, pickTime, shipping, tsp)
energy: +2 (pfCorrection, vfdSavings)
safety: +2 (havsCalculate, respiratorCalculate)
food: +4 (calorie, expiry, haccp, nutrition) [NEW DOMAIN]
utility: +3 (assignment, qrcode, unit) [NEW DOMAIN]

Total: 104 functions across 11 domains

--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
     "./safety": {
       "types": "./dist/safety/index.d.ts",
       "import": "./dist/safety/index.js"
+    },
+    "./utility": {
+      "types": "./dist/utility/index.d.ts",
+      "import": "./dist/utility/index.js"
+    },
+    "./food": {
+      "types": "./dist/food/index.d.ts",
+      "import": "./dist/food/index.js"
     }
   },
   "files": [
