--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+# Dependencies
 node_modules/
+
+# Build output
 dist/
+
+# Turbo
 .turbo/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+
+# Test coverage
+coverage/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
