feat: v0.3.0 — add 8 engineering functions + v0.2.0 refactoring
v0.2.0 refactoring:
- Fix roundTo() negative number rounding (-2.555 → -2.56)
- Consolidate normalCDF/normalInvCDF/clamp into shared math.ts
- Replace Math.round patterns with roundTo() in 8 files
- Discriminated unions for MetalWeightInput, DilutionInput, ReactorInput, BoltInput
- Remove empty QR code module and duplicate pressTonnage test
- Raise coverage thresholds (90% lines, 95% functions)
- Apply roundTo() to oee() output

v0.3.0 new functions (8):
- controlChart(): SPC X-bar/R and X-bar/S (AIAG/ASTM E2587, n=2..25)
- pipeFlow(): Darcy-Weisbach + Swamee-Jain friction factor
- heatTransfer(): Conduction/convection/radiation (Fourier/Newton/Stefan-Boltzmann)
- momentOfInertia(): 7 cross-sections with parallel axis theorem
- ohmsLaw(): V=IR, P=VI calculator with discriminated union
- solarOutput(): PVWatts-based solar panel estimation
- ventilationRate(): ASHRAE 62.1 ACH/CFM calculation
- brakingDistance(): AASHTO stopping distance with grade adjustment

110 test files, 1705 tests passing.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "formulab",
-  "version": "0.1.11",
-  "description": "Manufacturing & Engineering calculation formulas library - 100+ industrial calculations for OEE, Cpk, metal weight, logistics, and more",
+  "version": "0.3.0",
+  "description": "Manufacturing & Engineering calculation formulas library - 110+ industrial calculations for OEE, Cpk, SPC, metal weight, pipe flow, logistics, and more",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
