--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "formulab",
-  "version": "0.3.0",
-  "description": "Manufacturing & Engineering calculation formulas library - 110+ industrial calculations for OEE, Cpk, SPC, metal weight, pipe flow, logistics, and more",
+  "version": "0.5.0",
+  "description": "Manufacturing & Engineering calculation formulas library - 146 industrial calculations across 14 domains for OEE, Cpk, SPC, metal weight, CNC machining, GD&T, battery, environmental, pipe flow, logistics, and more",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -54,6 +54,18 @@
     "./utility": {
       "types": "./dist/utility/index.d.ts",
       "import": "./dist/utility/index.js"
+    },
+    "./battery": {
+      "types": "./dist/battery/index.d.ts",
+      "import": "./dist/battery/index.js"
+    },
+    "./environmental": {
+      "types": "./dist/environmental/index.d.ts",
+      "import": "./dist/environmental/index.js"
+    },
+    "./machining": {
+      "types": "./dist/machining/index.d.ts",
+      "import": "./dist/machining/index.js"
     }
   },
   "files": [
@@ -67,6 +79,7 @@
     "test": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest",
+    "docs:api": "typedoc",
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true})\"",
     "prepublishOnly": "npm run clean && npm run build && npm run test"
   },
@@ -96,7 +109,23 @@
     "energy",
     "safety",
     "niosh",
-    "haccp"
+    "haccp",
+    "battery",
+    "bms",
+    "soh",
+    "cycle-life",
+    "environmental",
+    "ghg",
+    "carbon-footprint",
+    "esg",
+    "scope1",
+    "scope2",
+    "scope3",
+    "cnc",
+    "gdt",
+    "true-position",
+    "gauge-block",
+    "bolt-circle"
   ],
   "author": "iyulab",
   "license": "MIT",
@@ -113,6 +142,8 @@
   },
   "devDependencies": {
     "@vitest/coverage-v8": "^3.2.4",
+    "typedoc": "^0.28.16",
+    "typedoc-plugin-markdown": "^4.9.0",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
   }
